Fri Jun  8 11:25:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (establishShell): now needs status to protect from
	  exceptions in rb_fork_err().

Thu Jun  7 22:13:05 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_fork_err): Fix the conditoin to use rb_protect.

Thu Jun  7 20:29:12 2012  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h: rb_exec_arg and related stuff moved back from
	  internal.h

Thu Jun 07 15:53:03 2012  Koichi Sasada  <ko1@atdot.net>

	* .gdbinit: add function `trace_machine_instructions' to trace
	  in native machine assemble.
	  See https://bugs.ruby-lang.org/projects/ruby-trunk/wiki/MachineInstructionsTraceWithGDB
	  for more details.

Wed Jun  6 21:31:21 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_exec_cmd) renamed from proc_exec_v.
	  (proc_exec_sh): renamed from rb_proc_exec_e.
	  (proc_spawn_cmd_internal): renamed from proc_spawn_v.
	  (proc_spawn_cmd): renamed from proc_spawn_n.
	  (proc_spawn_sh): renamed from proc_spawn.

Wed Jun  6 21:18:47 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (try_with_sh): please take care of the macro defined by
	  you.

Wed Jun  6 20:45:08 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_exec_v): don't call dln_find_exe_r here because it
	  is not async-signal-safe and proc_exec_v is called in a child
	  process.
	  command_abspath field of rb_exec_arg.
	  (rb_exec_fillarg): call dln_find_exe_r and set command_abspath.
	  (rb_exec_err): Give the absolute path of the invoking command for
	  proc_exec_v, instead of the command name.

	* internal.h: add command_abspath field for rb_exec_arg. 

Wed Jun  6 20:08:01 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (try_with_sh): take envp argument.
	  (exec_with_sh): ditto.  use it for execve.
	  (proc_exec_v): provide envp for try_with_sh.

Wed Jun  6 13:25:04 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_wrap_io_handle): new API.